--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "startbootstrap-sb-admin-2": "^4.1.4"
     }
 }
